Legend:

[+] New/improved feature
[B] Bug fixed
[K] Known issue
[O] Other

Change log
==========

v0.6.2

[O] merged logging related pull request #1
[B] fixed stalling situation in crofsock under higher load
[B] making class indent thread aware
[B] fixed buffer bloat like situation in crofqueue under high loads

v0.6.1

[B] Distributing missing ctspaddress.h
[B] Fix versioning.m4 for subpackage and out-of-repository builds

v0.6.0

[K] Prevent compilation with buggy GCC versions (-O3 opt.)

[+] Workaround for automake 1.14 subdir-objects bug(13928).
[+] Fixed some LLVM related warnings and errors (clang/clang++)

[+][hal] Added NF port extensions

[+][pipeline] Added missing support for OFPP_TABLE
[+][pipeline] Added NF port type extensions
[+][pipeline] Added L2 (ETH_DST, VLAN) l2hash matching algorithm
[B][pipeline] Fixed issue #40 (bug) => set cookie field in Packet-In messages based on flow entry
[+][common] All crofsock instances run in dedicated own thread
[+][common] Revised thread support in ciosrv
[+][common] Revised classes crofconn and crofsock => new scheduling for OpenFlow messages
[+][common] Revised classes crofctl, crofdpt and crofchan => API updated
[B][common] Doxygen documentation updated
[+][common] New thread API added to rofl::cioloop

v0.5.3

[B][pipeline] Issue #40 (bug) => invalid cookie field in Packet-In messages for OpenFlow 1.3
                                 (won't fix), fix available in 0.6.0

[B][hal] Updated misleading documentation concerning flow_mod_add/modify calls


v0.5.2

[B][common] Fixed issue #39 (bug) => set flag keep_on_runnin gin method cioloop:run() to false, when
                                     terminating the loop
[B][common] Fixed issue #38 (bug) => handling so far uncaught exception in etherswitch::operator<<()
[B][common] Fixed issue #37 (bug) => cofactions::drop_action()
[+][common] Fixed issue #36 (enhancement) => making cofactions::count_action_type() const method