@@ -552,7 +552,7 @@ public:
 	friend std::ostream&
 	operator<< (std::ostream& os, const coxmatch_ofb_in_port& oxm) {
 		os << dynamic_cast<const coxmatch&>(oxm);
-		os << indent(2) << "<in-port: " << std::hex << (int)oxm.get_u32value() << std::dec << " >" << std::endl;
+		os << indent(2) << "<in-port: 0x" << std::hex << (int)oxm.get_u32value() << std::dec << " >" << std::endl;
 		return os;
 	};
 };
@@ -578,7 +578,7 @@ public:
 	friend std::ostream&
 	operator<< (std::ostream& os, const coxmatch_ofb_in_phy_port& oxm) {
 		os << dynamic_cast<const coxmatch&>(oxm);
-		os << indent(2) << "<in-phy-port: " << std::hex << (int)oxm.get_u32value() << std::dec << " >" << std::endl;
+		os << indent(2) << "<in-phy-port: 0x" << std::hex << (int)oxm.get_u32value() << std::dec << " >" << std::endl;
 		return os;
 	};
 };
@@ -609,8 +609,8 @@ public:
 	operator<< (std::ostream& os, const coxmatch_ofb_metadata& oxm) {
 		os << dynamic_cast<const coxmatch&>(oxm);
 		os << std::hex;
-		os << indent(2) << "<metadata: "
-		<< (unsigned long long)oxm.get_u64value() << "/" << (unsigned long long)oxm.get_u64mask()
+		os << indent(2) << "<metadata: 0x"
+		<< (unsigned long long)oxm.get_u64value() << "/0x" << (unsigned long long)oxm.get_u64mask()
 		<< std::dec
 		<< " >" << std::endl;
 		return os;
